[package]
name = "frust"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.10"
ferris-says = "0.2"

[dev-dependencies]
solana-program-test = "=1.7.10"
solana-sdk = "=1.7.10"

[lib]
name = "crowdfund"
crate-type = ["cdylib", "lib"]